@@ -1,5 +1,6 @@
 == Version 1.0.6 (in SVN)
 
+* Fixed [#11793] should raise_error('with a message') does not work correctly
 * Fixed [#11774] Mocks should respond to :kind_of? in the same way they respond to :is_a?
 * Fixed [#11508] Exceptions are not raised for Controller Specs
 * Applied [#11615] Partial mock methods give ambiguous failures when given a method name as a String (Patch from Jay Phillips)
